# nitorch-io

./: .gitignore  README.md  setup.cfg  setup.py
nitorch_io/: __init__.py  readers.py  writers.py
nitorch_io/cli/convert/: cli.py  main.py  parser.py
nitorch_io/cli/info/: __init__.py  cli.py  main.py  parser.py
nitorch_io/tests/: test_babel.py
nitorch_io/transforms/: conversions.py  readers.py  writers.py
nitorch_io/transforms/freesurfer/: fsutils.py  lta.py  registerdat.py
nitorch_io/utils/: affine.py  dtypes.py  indexing.py  linalg.py  torchutils.py  version.py  volutils.py
nitorch_io/volumes/: mapping.py  readers.py  writers.py
nitorch_io/volumes/babel/: array.py  metadata.py
nitorch_io/volumes/tiff/: array.py  metadata.py
