[metadata]
name = nitorch-io
author = Yael Balbastre
author_email = yael.balbastre@gmail.com
description = Read and write neuroimaging file formats
long_description = file:README.md
platforms = OS Independent
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Medical Science Apps.
project_urls =
    Source Code=https://github.com/balbasty/nitorch-io

[options]
python_requires = >= 3.6
install_requires =
    torch >= 1.8
    numpy
    nibabel
    tifffile

[options.extras_require]
test =
    pytest
    wget